tests/resources/valid/definition/tuple_modify_mut.mamba
class MyClass
    def my_field: Int := 10


def (a, b) := (MyClass(), 10)
a.my_field := 20
