tests/resources/invalid/type/class/reassign_non_existent.mamba
class MyClass
    def something: Int := 10


def my_class := MyClass()
my_class.other_thing := 20
